2009-11-27  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Add separate method for pause command to WebDevToolsAgent
        and WebDevToolsFrontendClient interfaces so that pause command
        can be processed on the IO thread.

        https://bugs.webkit.org/show_bug.cgi?id=31934

        * public/WebDevToolsAgent.h:
        * public/WebDevToolsFrontendClient.h:
        (WebKit::WebDevToolsFrontendClient::sendDebuggerCommandToAgent):
        (WebKit::WebDevToolsFrontendClient::sendDebuggerPauseScript):
        (WebKit::WebDevToolsFrontendClient::activateWindow):
        (WebKit::WebDevToolsFrontendClient::closeWindow):
        (WebKit::WebDevToolsFrontendClient::dockWindow):
        (WebKit::WebDevToolsFrontendClient::undockWindow):

2009-11-27  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        WebCore part of the fix that allows to view plugin
        resources loaded by plugins. Methods that for resource
        loading notifications are exposed through WebDevToolsAgent
        interface to the glue code to allow Chromium's plugin
        implementation to notify InspectorController about resource
        loading in plugins.

        https://bugs.webkit.org/show_bug.cgi?id=31832

        * public/WebDevToolsAgent.h:
        * public/WebView.h:
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::createUniqueIdentifierForRequest):
        * src/WebViewImpl.h:

2009-11-26  Yury Semikhatsky  <yurys@chromium.org>

        Not reviewed. Build fix: revert r51421.

        * public/WebDevToolsAgent.h:
        * public/WebView.h:
        * src/WebViewImpl.cpp:
        * src/WebViewImpl.h:

2009-11-25  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by David Levin.

        [Chromium] Implement canSetValueAttribute in the API.
        https://bugs.webkit.org/show_bug.cgi?id=31894

        * public/WebAccessibilityObject.h: Added decl.